--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -25,13 +25,13 @@
 .teacher-item header div strong{
 	font: 700 2.4rem Archivo;
 	display: block;
-	color: var(--color-text-title);	
+	color: var(--color-text-title);
 }
 
 .teacher-item header div span{
 	font-size: 1.6rem;
 	display: block;
-	margin-top: 0.4rem;	
+	margin-top: 0.4rem;
 }
 
 .teacher-item > p {
@@ -56,11 +56,11 @@
 	display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
 	width: 20rem;
 	height: 5.6rem;
 	background: var(--color-secundary);
-	color: var(--color-button-text);
+	color: var(--color-a-text);
 	border: 0;
 	border-radius: 0.8rem;
 	cursor: pointer;
@@ -68,17 +68,18 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
-	transition: 0.2s;
+  transition: 0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover{
+.teacher-item footer a:hover{
 	background: var(--color-secundary-dark);
 }
 
 @media( min-width: 700px) {
 	.teacher-item header,
 	.teacher-item footer {
-		padding: 3.2rem; 
+		padding: 3.2rem;
 	}
 
 	.teacher-item > p {
@@ -90,13 +91,13 @@
 		margin-left: 1.6rem;
 	}
 
-	.teacher-item footer button {
+	.teacher-item footer a {
 		width: 24.5rem;
 		font-size: 1.6rem;
 		justify-content: center;
 	}
 
-	.teacher-item footer button img {
+	.teacher-item footer a img {
 		margin-right: 1.6rem;
 	}
 }
